# usage

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  Makefile  buildbuddy.yaml  readme.md
.github/workflows/: run.yml
app/: BUILD.bazel  base64.cc  bm_json.cc  bm_pmr.cc  cmd.cc  cmd.h  comp.cc  compressor.cc  compressor.h  copts.bzl  enum.cc  expect_test.cc  format.cc  fs.cc  future_test.cc  get.cc  graph.cc  hash.cc  http.cc  http.h  int128.cc  json.cc  log.h  main.cc  meta.cc  meta.h  meta_test.cc  parameter.proto  pb_test.cc  random.cc  s2_test.cc  span.cc  strings.cc  task.cc  time.cc  traverse.cc
bazel/: extensions.bzl  repositories.bzl
bench/: BUILD.bazel  bm_arena.cc
lib/: BUILD.bazel  cmd.cc  compressor.cc  coro.h  executor.cc  executor.h  http.cc  log.h  meta.cc  meta.h
