"""
update to latest version from https://registry.bazel.build/
"""

module(name = "usage")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "snappy", version = "1.2.2")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "cpr", version = "1.14.1")
bazel_dep(name = "curl", version = "8.11.0.bcr.4")
bazel_dep(name = "cpp-httplib", version = "0.22.0")
bazel_dep(name = "cpuinfo", version = "0.0.0-20250925-877328f")
bazel_dep(name = "civetweb", version = "1.16.bcr.3")
bazel_dep(name = "stdexec", version = "5d9f3bfb032e9d71b2292b7add7d90cbf9d037a9")
bazel_dep(name = "nsync", version = "1.29.2")
bazel_dep(name = "compilation_database", version = "0.2.0")
git_override(
    module_name = "compilation_database",
    commit = "8f33eab1f0bd0e03466d18ab6f5258772aacbba9",
    remote = "https://github.com/0x1042/compilation_database.git",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()
