"""
update to latest version from https://registry.bazel.build/
"""

module(name = "usage")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "asio", version = "1.34.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20260107.0")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "snappy", version = "1.2.2")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "cpr", version = "1.12.0")
bazel_dep(name = "curl", version = "8.8.0.bcr.3")
bazel_dep(name = "cpp-httplib", version = "0.22.0")
bazel_dep(name = "cpuinfo", version = "0.0.0-20250925-877328f")
bazel_dep(name = "stdexec", version = "5d9f3bfb032e9d71b2292b7add7d90cbf9d037a9")
bazel_dep(name = "magic_enum", version = "0.9.7")
bazel_dep(name = "libffi", version = "3.4.7.bcr.3")
bazel_dep(name = "foonathan_memory", version = "0.7.3.bcr.2")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "reproc", version = "14.2.5")
bazel_dep(name = "s2geometry", version = "0.13.1")
bazel_dep(name = "compilation_database", version = "0.2.0")
git_override(
    module_name = "compilation_database",
    commit = "8bd30078d055ce0e2ae2e7cb67214d9961a3d5de",
    remote = "https://github.com/0x1042/compilation_database.git",
)

non_module_dependencies = use_extension("//bazel:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "taskflow")
use_repo(non_module_dependencies, "expected")
# use_repo(non_module_dependencies, "RESTinCurl")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()
