load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("//app:copts.bzl", "DEFAULT_COPTS")

proto_library(
    name = "parameter_proto",
    srcs = ["parameter.proto"],
)

cc_proto_library(
    name = "parameter_pb",
    deps = [
        ":parameter_proto",
    ],
)

cc_library(
    name = "log",
    hdrs = [
        "log.h",
    ],
    copts = DEFAULT_COPTS,
    defines = [],
    deps = [],
)

cc_library(
    name = "http",
    srcs = [
        "http.cc",
    ],
    hdrs = [
        "http.h",
    ],
    copts = DEFAULT_COPTS,
    defines = [
        "CPPHTTPLIB_OPENSSL_SUPPORT",
    ],
    deps = [
        "@abseil-cpp//absl/log:log",
        "@cpp-httplib//:httplib",
        "@cpr",
    ],
)

cc_library(
    name = "meta",
    srcs = [
        "meta.cc",
    ],
    hdrs = [
        "meta.h",
    ],
    copts = DEFAULT_COPTS,
    defines = [
        "CPPHTTPLIB_OPENSSL_SUPPORT",
    ],
    deps = [
        "@abseil-cpp//absl/log:log",
        "@cpuinfo",
    ],
)

cc_library(
    name = "compressor",
    srcs = [
        "compressor.cc",
    ],
    hdrs = [
        "compressor.h",
    ],
    copts = DEFAULT_COPTS,
    deps = [
        "@lz4",
        "@lz4//:lz4_hc",
        "@snappy",
        "@zstd",
    ],
)

cc_test(
    name = "usage",
    srcs = [
        "comp.cc",
        "enum.cc",
        "format.cc",
        "fs.cc",
        "future_test.cc",
        "get.cc",
        "graph.cc",
        "json.cc",
        "main.cc",
        "meta_test.cc",
        "random.cc",
        "span.cc",
        "strings.cc",
        "task.cc",
        "time.cc",
        "traverse.cc",
    ],
    copts = DEFAULT_COPTS,
    deps = [
        ":compressor",
        ":http",
        ":log",
        ":meta",
        "@abseil-cpp//absl/cleanup:cleanup",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/random:random",
        "@abseil-cpp//absl/strings:strings",
        "@abseil-cpp//absl/synchronization:synchronization",
        "@abseil-cpp//absl/time:time",
        "@cpr",
        "@cpuinfo",
        "@curl",
        "@folly//folly/coro:blocking_wait",
        "@folly//folly/coro:task",
        "@folly//folly/executors",
        "@gflags",
        "@googletest//:gtest",
        "@magic_enum",
        "@rapidjson",
        "@stdexec",
        "@taskflow",
    ],
)

cc_binary(
    name = "bench_json",
    srcs = [
        "bm_arena.cc",
        "bm_json.cc",
        "bm_pmr.cc",
    ],
    deps = [
        ":parameter_pb",
        "@google_benchmark//:benchmark",
        "@protobuf",
        "@rapidjson",
    ],
)
