load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:copts.bzl", "DEFAULT_COPTS")

cc_test(
    name = "usage",
    srcs = [
        "base64.cc",
        "comp.cc",
        "enum.cc",
        "expect_test.cc",
        "format.cc",
        "fs.cc",
        "future_test.cc",
        "get.cc",
        "graph.cc",
        "hash.cc",
        "json.cc",
        "main.cc",
        "meta_test.cc",
        "random.cc",
        "s2_test.cc",
        "span.cc",
        "strings.cc",
        "task.cc",
        "time.cc",
        "traverse.cc",
    ],
    copts = DEFAULT_COPTS,
    deps = [
        "//lib:compressor",
        "//lib:http",
        "//lib:log",
        "//lib:meta",
        "@abseil-cpp//absl/cleanup:cleanup",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/hash:city",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/random:random",
        "@abseil-cpp//absl/strings:strings",
        "@abseil-cpp//absl/synchronization:synchronization",
        "@abseil-cpp//absl/time:time",
        # "@asio",
        "@cpr",
        "@cpuinfo",
        "@curl",
        "@expected",
        "@gflags",
        "@googletest//:gtest",
        "@magic_enum",
        "@rapidjson",
        "@reproc//:reproc++",
        "@s2geometry//:s2",
        "@stdexec",
        "@taskflow",
    ],
)
